Clarify branding: ferriByte (product) vs ferri (CLI tool)

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <div class="step">
                         <div class="step-title">
                             <span class="step-number">1</span>
-                            Install ferriByte on your Mac
+                            Install ferri CLI
                         </div>
                         <div class="code-block" onclick="copyToClipboard('curl -fsSL ${installUrl} | sh', 'msg-install')" style="cursor: pointer;">
                             curl -fsSL ${installUrl} | sh
@@ -260,7 +260,7 @@
                     <div class="step">
                         <div class="step-title">
                             <span class="step-number">3</span>
-                            Start using ferriByte
+                            Start using ferri
                         </div>
                         <p style="margin-top: 0.5rem; opacity: 0.9; font-size: 0.875rem;">
                             Your device is now bound to this hardware key. Store secrets, run workflows, and more!
