--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #CE422B 0%, #8B4513 100%);
+            background: #1a1a1a;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 1rem;
-            color: white;
+            color: #e0e0e0;
         }
 
         .container {
             max-width: 500px;
             width: 100%;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
+            background: #2a2a2a;
+            border: 2px solid #CE422B;
             border-radius: 20px;
             padding: 2rem;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 32px rgba(206, 66, 43, 0.2);
         }
 
         .logo {
@@ -57,7 +57,8 @@
         }
 
         .license-box {
-            background: rgba(0, 0, 0, 0.3);
+            background: #1a1a1a;
+            border: 1px solid #CE422B;
             border-radius: 12px;
             padding: 1.5rem;
             margin-bottom: 1.5rem;
@@ -78,8 +79,8 @@
         }
 
         .copy-btn {
-            background: white;
-            color: #CE422B;
+            background: #CE422B;
+            color: white;
             border: none;
             padding: 0.75rem 1.5rem;
             border-radius: 8px;
@@ -88,7 +89,11 @@
             width: 100%;
             margin-top: 1rem;
             font-size: 1rem;
-            transition: transform 0.1s;
+            transition: all 0.2s;
+        }
+
+        .copy-btn:hover {
+            background: #FF6B52;
         }
 
         .copy-btn:active {
@@ -100,7 +105,8 @@
         }
 
         .step {
-            background: rgba(0, 0, 0, 0.2);
+            background: #1a1a1a;
+            border: 1px solid #3a3a3a;
             border-radius: 12px;
             padding: 1rem;
             margin-bottom: 1rem;
@@ -108,8 +114,8 @@
 
         .step-number {
             display: inline-block;
-            background: white;
-            color: #CE422B;
+            background: #CE422B;
+            color: white;
             width: 24px;
             height: 24px;
             border-radius: 50%;
@@ -126,7 +132,8 @@
         }
 
         .code-block {
-            background: rgba(0, 0, 0, 0.4);
+            background: #0d0d0d;
+            border: 1px solid #CE422B;
             padding: 0.75rem;
             border-radius: 6px;
             font-family: 'Courier New', monospace;
@@ -134,6 +141,12 @@
             margin-top: 0.5rem;
             overflow-x: auto;
             position: relative;
+            cursor: pointer;
+            transition: border-color 0.2s;
+        }
+
+        .code-block:hover {
+            border-color: #FF6B52;
         }
 
         .copy-code {
@@ -157,7 +170,8 @@
         }
 
         .error-msg {
-            background: rgba(244, 67, 54, 0.3);
+            background: #1a1a1a;
+            border: 2px solid #CE422B;
             padding: 1rem;
             border-radius: 8px;
             margin-bottom: 1rem;
@@ -177,7 +191,7 @@
 
         <div class="footer">
             ferriByte - Hardware-Locked Secrets<br>
-            <a href="https://ferribyte.com" style="color: white;">ferribyte.com</a>
+            <a href="https://ferribyte.com" style="color: #CE422B; text-decoration: none;">ferribyte.com</a>
         </div>
     </div>
 
